[tool.poetry]
name = "nuropb"
version = "0.1.0"
description = "NuroPb is a messaging pattern for building distributed systems."
authors = ["Robert Betts <robert.betts@genoa.io>"]
readme = "README.md"
homepage = "https://github.com/robertbetts/nuropb"
repository = "https://github.com/robertbetts/nuropb"
keywords = ["python", "api", "event", "rpc", "distributed", "edd"]
classifiers = [
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]
packages = [
    {include = "nuropb", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.0"
pika = "^1.3.2"
requests = {extras = ["security"], version = "^2.31.0"}
types-requests = "^2.31.0.2"
tornado = "^6.3.3"
etcd3-py = "^0.1.6"

[tool.poetry.group.dev.dependencies]
poetry = "^1.5.1"
pytest = "^7.3.1"
certifi = "^2022.12.7"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-dotenv = "^0.5.2"
black = "^23.3.0"
mypy = "^1.4.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
env_files = [".env_test"]
testpaths = ["tests"]

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
log_cli_format = " %(levelname).1s %(asctime)s,%(msecs)d %(module)s %(lineno)s %(message)s"
log_cli_date_format = "%d %H:%M:%S"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests",
]

[tool.pylint]
#ignore-paths = "tests"
notes = "FIXME,XXX"